# backend

./: .gitignore  ALERT_SYSTEM_SUMMARY.md  BUTTON_WORKFLOW_GUIDE.md  LOCATION_API_KEYS.md  MIGRATION_SUMMARY.md  alembic.ini  debug_blockchain_issue.py  debug_itinerary_query.py  fix_production_enum.py  fix_production_enum.sql  pyproject.toml  test_alerts_complete.py  test_blockchain_config.py  test_geofencing_alerts_integration.py  test_get_itinerary_function.py  test_refresh_token_complete.py  test_routing_complete.py  test_routing_enhanced.py  test_trip_creation.py  update_existing_trip.py
alembic/: env.py
alembic/versions/: 0763d2f84510_add_location_sharing_table.py  1b1c0428bc50_initial_migration_2.py  24cbbeba86db_remove_difficulty_level_from_places.py  2a1c6ed4a3f2_move_tourist_id_to_trips_nullable.py  2a44af28e726_ensure_alerts_table_indexes.py  319d120eecc2_add_test_coordinates_table.py  480ca0bdc4b0_add_alerts_table.py  4ac136f61ee6_add_places_table_and_update_itinerary_.py  5309dd9a2417_add_blockchain_id_tables.py  535f13a170b8_initial_migration.py  5e5e1a055bfd_initial_migration.py  658d9ba25f3d_initial_commit.py  6c31bc01f9d2_add_tourist_id_fields_to_user.py  6cb22c2bfde4_enhance_trip_tracking_with_button_.py  6ebcece9f613_create_alerts_table_manually.py  74167a091164_updated_some.py  7732b2435053_add_trek_path_table.py  779005bb52a8_initial_migration.py  (+15 more)
app/: main.py
contracts/: tourist_identity.sol
docs/: alerts_api.md  geofencing_api.md  geofencing_routing_integration.md  refresh_token_api.md  routing_api.md  user_management_api.md
(+87 files in other folders)
